Refactor reports.html for improved structure and styling

--- a/templates/reports.html
+++ b/templates/reports.html
@@ -425,7 +425,7 @@
                 <i class="fa-solid fa-users-viewfinder"></i>
             </div>
             <div class="card-content">
-                <h3 class="card-header-text">Staff Ranking</h3>
+                <h3 class="card-header-text">Staff Performance</h3>
                 <p class="card-body-text">Sales performance leaderboard.</p>
             </div>
             <div class="card-footer">
@@ -438,6 +438,7 @@
 
 </div>
 {% endblock %}
+
 
 
 
