--- a/templates/reports/daily_summary.html
+++ b/templates/reports/daily_summary.html
@@ -228,8 +228,9 @@
 
 <script>
     document.addEventListener("DOMContentLoaded", function() {
-        flatpickr(".date-picker", { dateFormat: "Y-m-d", allowInput: true });
+        flatpickr(".date-picker", { dateFormat: "d-m-Y", allowInput: true });
     });
 </script>
 {% endblock %}
+
 
